<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/track_your_views"
        android:gravity="center"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/track"
        android:text="@string/get_a_better_understanding_of_how_people_are_discovering_your_photos_with_flickr_pro"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/track"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/baseline_stacked_line_chart_24"
        android:backgroundTint="@color/lavender"
        android:importantForAccessibility="no"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:text="@string/learn_more"/>

</RelativeLayout>