<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/post_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/image2"
        android:layout_margin="4dp"
        android:importantForAccessibility="no" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="VisualLintBounds">

        <androidx.cardview.widget.CardView
            android:id="@+id/feed_avatar_frame1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:elevation="12dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/feed_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/photo1"
                android:importantForAccessibility="no" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/feed_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/feed_more"
            android:layout_toEndOf="@id/feed_avatar_frame1"
            android:paddingTop="10dp"
            android:text="@string/navia"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/feed_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feed_username"
            android:layout_toStartOf="@id/feed_more"
            android:layout_toEndOf="@id/feed_avatar_frame1"
            android:text="@string/recommended"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/feed_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:importantForAccessibility="no"
            android:paddingTop="10dp"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:tint="@color/grey"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:paddingTop="4dp"
        android:paddingBottom="10dp"
        android:text="@string/beautiful_scene"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:background="@color/lavender"
        tools:ignore="VisualLintBounds" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        tools:ignore="VisualLintBounds">

        <ImageButton
            android:id="@+id/feed_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="6dp"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_star_outline_24"
            app:tint="@color/grey"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/feed_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1977"
            android:layout_toEndOf="@+id/feed_star1"
            android:layout_centerVertical="true"
            tools:ignore="RelativeOverlap,VisualLintBounds" />

        <ImageButton
            android:id="@+id/feed_commentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_chat_bubble_outline_24"
            app:tint="@color/grey"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/feed_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/feed_commentBtn"
            android:text="@string/_70"
            tools:ignore="RelativeOverlap,VisualLintBounds" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_share_24"
            app:tint="@color/grey"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@color/lavender"
        tools:ignore="VisualLintBounds">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_star_24"
            app:tint="@color/grey"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck,VisualLintBounds" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/polo_mike_and_1975_others_favorite"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/feed_comment_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@color/lavender"
        tools:ignore="VisualLintBounds">

        <ImageButton
            android:id="@+id/feed_comment_section1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="14dp"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_chat_bubble_24"
            app:tint="@color/grey"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/feed_comment_username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/feed_total_comments"
            android:layout_toEndOf="@+id/feed_comment_section1"
            android:text="@string/john_doe"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feed_comment_username1"
            android:layout_toStartOf="@id/feed_total_comments"
            android:layout_toEndOf="@id/feed_comment_section1"
            android:text="@string/marvelous"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/feed_total_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_1000_of_1000"
            android:textColor="#1A237E" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/lavender"
        tools:ignore="VisualLintBounds" />

</LinearLayout>